--- a/app/templates/admin/admin.html
+++ b/app/templates/admin/admin.html
@@ -27,6 +27,7 @@
         <a class="btn" href="{{ url_for('formatos.formatos') }}">Ver / Cargar Formatos</a>
         <a class="btn" href="{{ url_for('control_mac.listar_macs') }}">Registrar un Direccion mac</a>
         <a class="btn" href="{{ url_for('certificado.listar_folios') }}">Lista de Folios</a>
+        <a class="btn" href="{{ url_for('pagos.admin_panel') }}">Pago de Internet</a>
     </div>
 {% endblock %}
 </body>
