--- a/app/templates/enfermeria/formulario.html
+++ b/app/templates/enfermeria/formulario.html
@@ -8,17 +8,7 @@
 
 
 
-<head>
-    <title>Captura Salud del Adulto</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
- 
-
-</head>
 
   <!-- Mensajes flash -->
   {% with messages = get_flashed_messages(with_categories=true) %}
@@ -55,12 +45,14 @@
          <p>Bienvenido al panel de usuario.</p>
     </div>
     <div class="d-flex justify-content-end gap-3 mt-1 col">
-            <a href="{{ url_for('enfermeria.consultar') }}" class="btn btn-primary">
+            <a href="{{ url_for('enfermeria.consultar') }}" class="btn btn-info">
                Consulta por Nombre
             </a>
             <a href="{{ url_for('enfermeria.tutorial') }}">
                 <button class="btn btn-info">📘 Ver Tutorial</button>
             </a>
+             <a href="{{ url_for('cronicos.pacientes_cronicos') }}"
+       class="btn btn-info">Pacientes Cronicos</a>
            
     </div>
         <form method="POST" class="row g-3">
