--- a/app/templates/main/home.html
+++ b/app/templates/main/home.html
@@ -168,6 +168,15 @@
         </div>
       </div>
     </div>
+       <div class="col-md-6 col-lg-3">
+      <div class="card h-100 shadow-sm border-0">
+        <div class="card-body text-center">
+        <i class="bi bi-calendar-check text-primary" style="font-size: 2.5rem;"></i>
+          <h5 class="card-title mt-3">Citas Médicas</h5>
+          <a href="{{ url_for('public.nueva_cita') }}" class="btn btn-maroon mt-2 w-100">Entrar</a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 {% endblock %}
