--- a/app/templates/enfermeria/formulario.html
+++ b/app/templates/enfermeria/formulario.html
@@ -53,6 +53,8 @@
             </a>
              <a href="{{ url_for('cronicos.pacientes_cronicos') }}"
        class="btn btn-info">Pacientes Cronicos</a>
+         <a href="{{ url_for('citas.buscar_paciente') }}"
+       class="btn btn-info">Citas</a>
            
     </div>
         <form method="POST" class="row g-3">
