--- a/app/templates/enfermeria/formulario.html
+++ b/app/templates/enfermeria/formulario.html
@@ -53,7 +53,7 @@
             </a>
              <a href="{{ url_for('cronicos.pacientes_cronicos') }}"
        class="btn btn-info">Pacientes Cronicos</a>
-         <a href="{{ url_for('citas.buscar_paciente') }}"
+         <a href="{{ url_for('citas.solicitudes_pendientes') }}"
        class="btn btn-info">Citas</a>
            
     </div>
