--- a/app/citas/templates/lista_pacientes.html
+++ b/app/citas/templates/lista_pacientes.html
@@ -7,13 +7,14 @@
     <h2>Citas pendientes</h2>
 
 {% if pendientes %}
-<table class="table table-bordered">
-    <thead>
+<table class="table table-bordered table-hover align-middle">
+    <thead class="table-light">
         <tr>
             <th>No. Expediente</th>
             <th>Nombre</th>
             <th>CURP</th>
-            <th>Fecha cita</th>
+            <th>Fecha de la cita</th>
+            <th class="text-center">Acciones</th>
         </tr>
     </thead>
     <tbody>
@@ -23,11 +24,59 @@
             <td>{{ cita.paciente.nombre }}</td>
             <td>{{ cita.paciente.curp }}</td>
             <td>{{ cita.fecha_hora.strftime("%d/%m/%Y %H:%M") }}</td>
+            <td class="text-center"><a href="{{ url_for('citas.editar_cita', id_cita=cita.id) }}"
+   class="btn btn-success btn-sm">
+   Confirmar cita
+</a><form action="{{ url_for('citas.cancelar_cita', id_cita=cita.id) }}" method="POST" style="display:inline;">
+    <button class="btn btn-danger btn-sm" onclick="return confirm('¿Cancelar esta cita?');">
+        Cancelar
+    </button>
+</form>
+            </td>
         </tr>
     {% endfor %}
     </tbody>
 </table>
-{% endif %}
+
+{% else %}
+        <p class="text-muted">Sin resultados.</p>
+    {% endif %}
+<h2>Citas Confirmadas</h2>
+
+{% if confirmadas %}
+<table class="table table-bordered table-hover align-middle">
+    <thead class="table-light">
+        <tr>
+            <th>No. Expediente</th>
+            <th>Nombre</th>
+            <th>CURP</th>
+            <th>Fecha de la cita</th>
+            <th class="text-center">Acciones</th>
+        </tr>
+    </thead>
+    <tbody>
+    {% for citas in confirmadas %}
+        <tr>
+            <td>{{ citas.paciente.id_paciente }}</td>
+            <td>{{ citas.paciente.nombre }}</td>
+            <td>{{ citas.paciente.curp }}</td>
+            <td>{{ citas.fecha_hora.strftime("%d/%m/%Y %H:%M") }}</td>
+            <td class="text-center"><a href="{{ url_for('citas.editar_cita', id_cita=citas.id) }}"
+   class="btn btn-success btn-sm">
+   Cambiar cita
+</a><form action="{{ url_for('citas.cancelar_cita', id_cita=citas.id) }}" method="POST" style="display:inline;">
+    <button class="btn btn-danger btn-sm" onclick="return confirm('¿Cancelar esta cita?');">
+        Cancelar
+    </button>
+</form>
+            </td>
+        </tr>
+    {% endfor %}
+    </tbody>
+</table>
+{% else %}
+        <p class="text-muted">Sin resultados.</p>
+    {% endif %}
 <h2>Buscar pacientes para programar cita</h2>
 
 <form method="GET" class="row g-2 mb-3">
@@ -43,7 +92,7 @@
 {% if q %}
     <h4>Resultados de búsqueda:</h4>
 
-    {% if resultados %}
+    {% if archivos %}
     <table class="table table-striped">
         <thead>
             <tr>
@@ -53,12 +102,13 @@
             </tr>
         </thead>
         <tbody>
-        {% for archivo in resultados %}
+     {% for archivo in archivos %}  
             <tr>
                 <td>{{ archivo.numero_expediente }}</td>
                 <td>{{ archivo.paciente.nombre }}</td>
                 <td>
-                    <a href="{{ url_for('citas.programar', id_paciente=archivo.id_paciente) }}"
+
+                    <a href="{{ url_for('citas.programar', id_paciente=archivo.paciente.id_paciente) }}"
                        class="btn btn-sm btn-success">
                         Programar cita
                     </a>
