--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>	
     <title>{% block title %}IMSS BIENESTAR{% endblock %}</title>
+ <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='img/favicon.ico.png') }}">
     <style>
         body {
             font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
