--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -133,7 +133,7 @@
          <div class="submenu">
                 <a href="{{ url_for('main.home') }}">Principal</a>
                 <ul class="submenu-items">
-                    <li><a href="{{ url_for('pagos.mis_pagos') }}">Perfil</a></li>
+                    <li><a href="{{ url_for('perfil.perfil_home') }}">Perfil</a></li>
                     <li><a href="{{ url_for('pagos.mis_pagos') }}">Pagos</a></li>
                 
                 </ul>
