--- a/app/templates/main/home.html
+++ b/app/templates/main/home.html
@@ -168,6 +168,18 @@
         </div>
       </div>
     </div>
+    <div class="col-md-6 col-lg-3">
+  <div class="card h-100 shadow-sm border-0">
+    <div class="card-body text-center">
+      <i class="bi bi-person-vcard fs-1 text-maroon"></i>
+      <h5 class="card-title mt-3">Buscar Paciente</h5>
+      <a href="{{ url_for('archivo_clinico.buscar_expedientes') }}"
+         class="btn btn-maroon mt-2 w-100">
+         Entrar
+      </a>
+    </div>
+  </div>
+</div>
        <div class="col-md-6 col-lg-3">
       <div class="card h-100 shadow-sm border-0">
         <div class="card-body text-center">
